syntax = "proto2";
package com.common.msg;

enum ChatModuleMsgSubCommand {
	// 请求聊天
	CHATMODULEMSG_SUB_CHAT = 27301;
	// 请求拉取聊天列表
	CHATMODULEMSG_SUB_CHATLIST = 27302;
}

message ChatInfo {
	//聊天玩家标识id
	required string pid = 1;
	//聊天玩家名称标识
	required string pname = 2;
	//聊天玩家头像标识
	required string head = 3;
	//聊天玩家头像框标识
	required string frame = 4;
	//聊天玩家title (客户端可自定义规则,服务器只负责存储和转发)
	required string title = 5;
	//聊天时间戳
	required int64 timeStamp = 6;
	//聊天内容
	required string content = 7;
}

//红包消息
message  RedEnvelope {
	//红包唯一id
	optional string uuid = 1;
	//红包配置id
	optional string itemid = 2;
	//红包生成时间戳
	optional int64 timeStamp = 3;
	//发送红包玩家id
	optional string pid = 4;
	//发送红包玩家昵称
	optional string pname = 5;
}

//红包领取消息
message RedEnvelopeRecord {
	//红包唯一id
	optional string uuid = 1;
	//玩家id
	optional string pid = 2;
	//玩家名称
	optional string name = 3;
	//领取的道具
	optional string itemId = 4;
	//领取的道具数量
	optional int32 count = 5;
	//领取的时间戳
	optional int64 timeStamp = 6;
}

message SpecialInfo {
	//特殊消息类型(客户端低版本对于不认识的特殊消息 直接不显示 或者有通用的展示方式(如当前版本不支持的消息))
	//特殊消息类型： 1: 红包消息(参见RedEnvelope) 2:红包领取消息(参见RedEnvelopeRecord)
	optional int32 type = 1;
	//消息体内容
	optional bytes msgBody = 2;
}

message ChatRequest {
	//聊天室id (目前只有队伍  客户端传递 1_teamId(teamId为对应的队伍))
	required string cid = 1;
	//聊天信息
	optional ChatInfo chatInfo = 2;
	//暂时先不处理这个问题  目前没有主动发送特殊消息的情况
	//optional SpecialInfo specialInfo = 3;
}

message ChatResponse {
	//服务器时间戳
	required int64 timeStamp = 1;
}

message ChatListRequest {
	//聊天室id
	required string cid = 1;
	//客户端已收到的最新消息的时间戳
	required int64 timeStamp = 2;
}

message ChatListResponse {
	//聊天室信息
	repeated ChatInfo chatInfos = 1;
	//特殊消息
	repeated SpecialInfo specialInfos = 2;
}

